Add haproxy to the playground
Add an haproxy for load balancing to master and slaves

--- a/gerrit-slave/gerrit.config
+++ b/gerrit-slave/gerrit.config
@@ -14,8 +14,10 @@
 	smtpServer = localhost
 [sshd]
 	listenAddress = *:29418
+	requestLog = true
 [httpd]
-	listenUrl = http://*:8080/
+	listenUrl = proxy-http://*:8080/
+	requestLog = true
 [cache]
 	directory = cache
 [container]
