--- a/gerrit-master/Dockerfile
+++ b/gerrit-master/Dockerfile
@@ -1,9 +1,9 @@
-FROM gerritforge/gerrit-ubuntu15.04:2.13.1
+FROM gerritforge/gerrit-ubuntu15.04:2.13.5
 
 USER root
 
 RUN apt-get install -y openjdk-8-jdk && update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java && \
-    apt-get install -y iputils-ping netcat
+    apt-get install -y iputils-ping netcat net-tools sudo openssh-server
 
 
 USER gerrit
@@ -15,13 +15,9 @@ ADD replication.config /var/gerrit/etc/
 RUN mkdir /var/gerrit/.ssh
 ADD id_rsa /var/gerrit/.ssh
 ADD id_rsa.pub /var/gerrit/.ssh
+ADD id_rsa.pub /var/gerrit/.ssh/authorized_keys
 ADD config /var/gerrit/.ssh
 
 USER root
 
-RUN apt-get install -y net-tools netcat inetutils-ping
-
-ADD start.sh /bin/
 ADD wait-for-it.sh /bin/
-
-CMD /bin/start.sh
