--- a/gerrit-master/gerrit.config
+++ b/gerrit-master/gerrit.config
@@ -1,6 +1,6 @@
 [gerrit]
 	basePath = git
-	canonicalWebUrl = http://localhost:8080/
+	canonicalWebUrl = http://localhost:18000/
 [database]
 	type = postgresql
 	hostname = postgres
@@ -14,8 +14,10 @@
 	smtpServer = localhost
 [sshd]
 	listenAddress = *:29418
+	requestLog = true
 [httpd]
-	listenUrl = http://*:8080/
+	listenUrl = proxy-http://*:8080/
+	requestLog = true
 [cache]
 	directory = cache
 [container]
